maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:2: error: not found: value murAgauche
  while(!murAgauche()){
         ^